--- a/Docker-compose.yml
+++ b/Docker-compose.yml
@@ -1,14 +1,32 @@
 version: '3'
 
 services:
-  app:
-    image: kumpapan/strapi
-    container_name: 67-ced-strapi
-    environment:
-      - DATABASE_CLIENT=value
-      - DATABASE_HOST=value
-      - DATABASE_PORT=value
-      - DATABASE_NAME=value
-      - DATABASE_USERNAME=value
-      - DATABASE_PASSWORD=value
+  strapi_server:
 
+    image: kumpapan/app:1.0.0
+    container_name: 67-ced-strapi_server
+    restart:  unless-stopped
+    env_file: .env
+    environment:
+      - DATABASE_CLIENT=postgres
+      - DATABASE_HOST=192.168.211.189
+      - DATABASE_PORT=54321
+      - DATABASE_NAME=kumpapan
+      - DATABASE_USERNAME=kumpapan
+      - DATABASE_PASSWORD=P-Tr823i7L
+    depends_on:
+      - db
+    ports:
+      - 1337:1337
+  db:
+    image: kumpapan/app:1.0.0
+    container_name: 67-ced-strapi_server
+    restart:  unless-stopped
+    env_file: .env
+    environment:
+      - DATABASE_CLIENT=postgres
+      - DATABASE_HOST=192.168.211.189
+      - DATABASE_PORT=54321
+      - DATABASE_NAME=kumpapan
+      - DATABASE_USERNAME=kumpapan
+      - DATABASE_PASSWORD=P-Tr823i7L
