--- a/Docker-compose.yml
+++ b/Docker-compose.yml
@@ -1,32 +1,28 @@
 version: '3'
 
-services:
+services: 
   strapi_server:
-
     image: kumpapan/app:1.0.0
     container_name: 67-ced-strapi_server
-    restart:  unless-stopped
+    restart: unless-stopped
     env_file: .env
     environment:
-      - DATABASE_CLIENT=postgres
-      - DATABASE_HOST=192.168.211.189
-      - DATABASE_PORT=54321
-      - DATABASE_NAME=kumpapan
-      - DATABASE_USERNAME=kumpapan
-      - DATABASE_PASSWORD=P-Tr823i7L
+      DATABASE_CLIENT: ${DATABASE_CLIENT}
+      DATABASE_NAME: ${DATABASE_NAME}
+      DATABASE_HOST: db
+      DATABASE_PORT: ${DATABASE_PORT}
+      DATABASE_USERNAME: ${DATABASE_USERNAME}
+      DATABASE_PASSWORD: ${DATABASE_PASSWORD}
     depends_on:
       - db
     ports:
-      - 1337:1337
+      - 1337:1337 
   db:
-    image: kumpapan/app:1.0.0
-    container_name: 67-ced-strapi_server
-    restart:  unless-stopped
+    image: postgres:13
+    container_name: 67-ced-db
+    restart: unless-stopped
     env_file: .env
     environment:
-      - DATABASE_CLIENT=postgres
-      - DATABASE_HOST=192.168.211.189
-      - DATABASE_PORT=54321
-      - DATABASE_NAME=kumpapan
-      - DATABASE_USERNAME=kumpapan
-      - DATABASE_PASSWORD=P-Tr823i7L
+      POSTGRES_USER: ${DATABASE_USERNAME}
+      POSTGRES_PASSWORD: ${DATABASE_PASSWORD}
+      POSTGRES_DB: ${DATABASE_NAME}
